<resources>
    <string name="app_name">ManagerCoin</string>
    <string name="compra">Compra</string>
    <string name="data">Data:</string>
    <string name="valor_aplicado">Valor Aplicado:</string>
    <string name="taxa">Taxa:</string>
    <string name="venda">Venda</string>
    <string name="saque">Saque</string>
    <string name="qtde">Quantidade:</string>
    <string name="valor">Valor:</string>
    <string name="deposito">Depósito</string>
    <string name="moeda">Moeda:</string>
    <string name="vendas">Vendas</string>
    <string name="depositos">Depósitos</string>
    <string name="compras">Compras</string>
    <string name="saques">Saques</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="nome">Nome:</string>
    <string name="title_activity_main2">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="managercoin">ManagerCoin</string>
    <string name="sigla">Sigla:</string>
    <string name="total">Total:</string>
    <string name="dashboard">DashBoard</string>
    <string name="senha_atual">Senha Atual</string>
    <string name="nova_senha">Nova Senha</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="moedas">Moedas</string>
    <string name="movimentacoes">Movimentações</string>
    <string name="tipo">Tipo</string>
    <string name="logout">Logout</string>
    <string name="reflesh">Atualizar</string>
    <string name="total_depositado">Total Depositado:</string>
</resources>
