<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_weight=".8"
            android:textAlignment="center"
            android:text="@string/moedas" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textAlignment="center"
                android:text="@string/moeda" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textAlignment="center"
                android:text="@string/sigla" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textAlignment="center"
                android:text="@string/total" />


        </LinearLayout>

        <ListView
            android:id="@+id/lstMoedas"
            android:layout_width="match_parent"
            android:background="@color/backgroundListViews"
            android:layout_height="0dp"
            android:layout_weight="3.5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_weight=".7"
            android:textAlignment="center"
            android:text="@string/movimentacoes" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight=".5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textAlignment="center"
                android:text="@string/data" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textAlignment="center"
                android:text="@string/tipo" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textAlignment="center"
                android:text="@string/moeda" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textAlignment="center"
                android:text="@string/valor" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textAlignment="center"
                android:text="@string/total" />


        </LinearLayout>

        <ListView
            android:id="@+id/lstMovimentacoes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/backgroundListViews"
            android:layout_weight="4" />


    </LinearLayout>


    <include
        layout="@layout/app_bar_main2"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main2"
        app:menu="@menu/activity_main2_drawer" />

</android.support.v4.widget.DrawerLayout>
